tests/baselines/reference/implementsClauseAlreadySeen.errors.txt
tests/cases/compiler/implementsClauseAlreadySeen.ts(4,22): error TS1005: '{' expected.
tests/cases/compiler/implementsClauseAlreadySeen.ts(4,33): error TS1005: ';' expected.
tests/cases/compiler/implementsClauseAlreadySeen.ts(4,35): error TS1005: ';' expected.
tests/cases/compiler/implementsClauseAlreadySeen.ts(5,11): error TS1005: ';' expected.
tests/cases/compiler/implementsClauseAlreadySeen.ts(4,22): error TS2304: Cannot find name 'implements'.
tests/cases/compiler/implementsClauseAlreadySeen.ts(5,5): error TS2304: Cannot find name 'baz'.


==== tests/cases/compiler/implementsClauseAlreadySeen.ts (6 errors) ====
    class C {
        
    }
    class D implements C implements C {
                         ~~~~~~~~~~
!!! error TS1005: '{' expected.
                                    ~
!!! error TS1005: ';' expected.
                                      ~
!!! error TS1005: ';' expected.
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
        baz() { }
              ~
!!! error TS1005: ';' expected.
        ~~~
!!! error TS2304: Cannot find name 'baz'.
    }